# flipcard

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
.flipdeck/: main.ts  preview.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  desktop-release.yml  release.yml
.storybook/: main.ts  preview.ts
adaptive-slide/: README.md  package-lock.json  package.json  tsconfig.json
adaptive-slide/docs/spec/: technical-specification.md
adaptive-slide/docs/wiki/: Architecture.md  Getting-Started.md  Home.md  MCP-App-Plugin.md  Schema-Reference.md
adaptive-slide/examples/: hello-world.deck.json
adaptive-slide/schemas/: deck.schema.json  slide.schema.json  tile.schema.json
adaptive-slide/schemas/tiles/: chart-tile.schema.json  code-tile.schema.json  (+4 more)
adaptive-slide/scripts/: validate.js
adaptive-slide/src/: index.ts  transformer.ts
adaptive-slide/tests/: mcp-app.test.js
apps/desktop/: MSIX.md  README.md  package.json  tauri.conf.json
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/showcase/: README.md  index.html  package.json  tsconfig.json
docs/: docusaurus.config.ts  package.json  sidebars.ts
docs/docs/: concepts.md  contributing.md  getting-started.md  intro.md
(+15 files in other folders)
