[package]
name = "flipcard-desktop"
version = "0.1.0"
description = "FlipCard Studio — native Windows wrapper for the FlipCard showcase"
authors = ["Microsoft"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "flipcard_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
